Update server.websocket to Jetty 11 (#185)
- Update default target platform
   - Eclipse 21.03-> 22.12
   - Jetty 9.x -> Jetty 11.0.12
   - LSP4J -> 0.8.0 -> 0.19.0  
   - ELK 0.7.0 -> 0.8.1
   - Add slf4j to enable logging in Jetty 10

- Consume log4j,slf4j and javax.servlet  via maven
   - Jetty websockt requires slf4j 2.0 which is not available via orbit and not compatible with the orbit log4j version.
     So we instead use the new target platform features and consume it directly from a maven location

-  Update server.websocket plugin to conform to Jetty API breaks

- Update to ELK 0.8.1 and remove workaround (Fixes https://github.com/eclipse-glsp/glsp/issues/265)
- Clean up pom files and consistently use properties for all versions
- Remove xtext nature from parent project. Otherwise we get false positives in the Eclipse Problem view.
- Ensure that both the p2 and m2 build use the same version ranges for their dependencies (if possible)

- Provide a second target for 2021-09  to use it as minimal baseline.

Part of https://github.com/eclipse-glsp/glsp/issues/764
Contributed on behalf of STMicroelectronics

--- a/examples/org.eclipse.glsp.example.workflow/build.properties
+++ b/examples/org.eclipse.glsp.example.workflow/build.properties
@@ -1,4 +1,4 @@
-#  Copyright (c) 2019-2020 EclipseSource and others.
+#  Copyright (c) 2019-2023 EclipseSource and others.
 # 
 #  This program and the accompanying materials are made available under the
 #  terms of the Eclipse Public License v. 2.0 which is available at
@@ -15,8 +15,8 @@
 bin.includes = .,\
                model/,\
                META-INF/,\
-               plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               plugin.xml               
 jars.compile.order = .
 source.. = src-gen,\
 		   src/
