--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -33,17 +33,17 @@
 						<plugin>
 							<groupId>org.eclipse.tycho</groupId>
 							<artifactId>tycho-p2-repository-plugin</artifactId>
-							<version>${tycho-version}</version>
+							<version>${tycho.version}</version>
 						</plugin>
 						<plugin>
 							<groupId>org.eclipse.tycho</groupId>
 							<artifactId>tycho-p2-plugin</artifactId>
-							<version>${tycho-version}</version>
+							<version>${tycho.version}</version>
 						</plugin>
 						<plugin>
 							<groupId>org.eclipse.tycho</groupId>
 							<artifactId>tycho-source-plugin</artifactId>
-							<version>${tycho-version}</version>
+							<version>${tycho.version}</version>
 						</plugin>
 					</plugins>
 				</pluginManagement>
