--- a/plugins/org.eclipse.glsp.server.websocket/pom.xml
+++ b/plugins/org.eclipse.glsp.server.websocket/pom.xml
@@ -45,17 +45,17 @@
 		<dependency>
 			<groupId>org.eclipse.glsp</groupId>
 			<artifactId>org.eclipse.glsp.server</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty.websocket</groupId>
-			<artifactId>javax-websocket-server-impl</artifactId>
-			<version>9.4.44.v20210927</version>
+			<artifactId>websocket-jakarta-server</artifactId>
+			<version>${jetty.websocket.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
-			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
-			<version>0.9.0</version>
+			<artifactId>org.eclipse.lsp4j.websocket.jakarta</artifactId>
+			<version>${lsp4j.version}</version>
 		</dependency>
 	</dependencies>
 
