--- a/tests/org.eclipse.glsp.graph.test/pom.xml
+++ b/tests/org.eclipse.glsp.graph.test/pom.xml
@@ -23,12 +23,12 @@
 		<dependency>
 			<groupId>org.eclipse.glsp</groupId>
 			<artifactId>org.eclipse.glsp.graph</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.7.1</version>
+			<version>${junit.jupiter.engine.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -46,7 +46,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-deploy-plugin</artifactId>
-						<version>2.8</version>
+						<version>${maven.deploy.version}</version>
 						<configuration>
 							<skip>false</skip>
 						</configuration>
